--- a/index.html
+++ b/index.html
@@ -3,65 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consola"</title>
+    <title>Consola</title>
     <link rel="stylesheet" href="./src/css/styles.css"
 </head>
 <body>
     <h1>Documentación de comandos en consola</h1>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/1.png">
+        <p>El comando "ls" list, muestra los archivos y carpetas</p>
+        <img src="src/img/1.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/2.png">
+        <p>el comando "cd" change directory cambia al directorio</p>
+        <img src="src/img/2.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/3.png">
+        <p>el comando "mkdir" make directory crea un nuevo directorio
+        </p>
+        <img src="src/img/3.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/4.png">
+        <p>Con el comando "ls" observamos el nuevo directorio</p>
+        <img src="src/img/4.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/5.png">
+        <p>Se crea con el comando "touch" nuevamente un archivo</p>
+        <img src="src/img/5.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/6.png">
+        <p>El comando "mv" move mueve un archivo a otra carpeta</p>
+        <img src="src/img/6.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/7.png">
+        <p>El comando "rm" remove elimina un archivo</p>
+        <img src="src/img/7.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/8.png">
+        <p>Con el comando "touch" se crea nuevamente el archivo index.html</p>
+        <img src="src/img/8.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/9.png">
+        <p>El comando "nano" permite editar archivos desde la consola</p>
+        <img src="src/img/9.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/10.png">
+        <p>El comando "vim" también permite editar archivos desde la consola</p>
+        <img src="src/img/10.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/11.png">
+        <p>Se crean carpetas "mkdir" y archivos "touch"</p>
+        <img src="src/img/11.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/12.png">
+        <p>El comando "ls -a" muestra los archivos y las carpetas con detalle </p>
+        <img src="src/img/12.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/13.png">
+        <p>El comando "ls-l" muestra los archivos con los permisos</p>
+        <img src="src/img/13.png">
     </div>
     <div>
-        <p></p>
-        <img width=40%; src="src/img/14.png">
+        <p>Se cambian los permisos del archivo README.md</p>
+        <img src="src/img/14.png">
     </div>
 </html>
